--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
 
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1" // fixed important when using dagger:hilt
+        classpath 'com.google.gms:google-services:4.3.10' // fixed important when using google-services
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
