--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,8 @@ dependencies {
     api "com.google.android.exoplayer:exoplayer-ui:2.15.1"
     api "com.google.android.exoplayer:extension-mediasession:2.15.1"
 
+    // Import the Firebase
+    implementation platform('com.google.firebase:firebase-bom:28.4.2')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
 }
